--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Administrador Diccionario Jurídico Minero-Energético</title>
-      <link rel="stylesheet" href="../CSS/StyleSheet.css">
-      <link rel="stylesheet" href="../CSS/StyleSheetExtraSmallDevices.css">
-      <link rel="stylesheet" href="../CSS/StyleSheetSmallDevices.css">
-      <link rel="stylesheet" href="../CSS/StyleSheetMediumDevices.css">
-      <link rel="stylesheet" href="../CSS/StyleSheetLargeDevices.css">
-      <link rel="stylesheet" href="../CSS/StyleSheetExtraLargeDevices.css">
-      <link rel="icon" type="image/x-icon" href="../../Public/Images/Favicon.png">
+      <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
   </head>
   <body>
     <div class="ContenedorAplicativo" id="app"></div>
-    <script defer type="module" src="/JS/main.jsx"></script>
+    <script defer type="module" src="/src/main.jsx"></script>
   </body>
 </html>
