--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es-CO">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Administrador Diccionario Jurídico Minero-Energético</title>
-      <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Administrador Diccionario Jurídico Minero-Energético</title>
+    <link rel="icon" type="image/x-icon" href="/Favicon.png">
   </head>
   <body>
     <div class="ContenedorAplicativo" id="app"></div>
