Lint de los archivos, consilta usuarios en home e implementa un skeleton manual

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es-CO">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador Diccionario Jurídico Minero-Energético</title>
-    <link rel="icon" type="image/x-icon" href="/Favicon.png">
-  </head>
-  <body>
-    <div class="ContenedorAplicativo" id="app"></div>
-    <script defer type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Administrador Diccionario Jurídico Minero-Energético</title>
+		<link rel="icon" type="image/x-icon" href="/Favicon.png" />
+	</head>
+	<body>
+		<div class="ContenedorAplicativo" id="app"></div>
+		<script defer type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
